0024848: CLang warnings -Wunused-value

Warning should be fixed.